files/examples/greeter-grpc-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-grpc-server
  labels:
    app: greeter-grpc-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: greeter-grpc-server
  template:
    metadata:
      labels:
        app: greeter-grpc-server
    spec:
      containers:
      - name: greeter-grpc-server
        image: aguilbau/hello-world-grpc:latest


---
apiVersion: v1
kind: Service
metadata:
  name: greeter-grpc-server
spec:
  selector:
    app: greeter-grpc-server
  ports:
    - protocol: TCP
      port: 443
      targetPort: 50051
