files/examples/my-gateway-tls-passthrough.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-hotel-tls-passthrough
spec:
  gatewayClassName: amazon-vpc-lattice
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: tls
      protocol: TLS
      port: 443
      tls:
        mode: Passthrough
