files/examples/greeter-grpc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: greeter-grpc-route
spec:
  parentRefs:
  - name: my-hotel
    sectionName: https
  rules:
  - backendRefs:
    - name: greeter-grpc-server
      kind: Service
      port: 443
      weight: 10
    matches:
        - method:
            service: helloworld.Greeter
            method: SayHello
